// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic test additional slices work in main 1`] = `
[
  {
    "body": {
      "mainStoreName": "test-main",
      "storeName": "test-replica-store-1",
      "syncSliceKeys": [
        "key_testSlice1",
      ],
    },
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "replica-info",
  },
  {
    "body": {
      "replicaStoreNames": [
        "test-replica-store-1",
      ],
      "storeName": "test-main",
      "syncSliceKeys": [
        "key_testSlice1",
        "key_mySlice",
      ],
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "main-info",
  },
  {
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "replica-ready",
  },
  {
    "body": {
      "targetSliceKey": "key_testSlice1",
      "tx": {
        "actionId": "increment",
        "config": {
          "actionId": "increment",
          "payload": [],
          "sourceSliceLineage": "l_<FOREIGN_STORE(test-main)>$",
          "sourceSliceName": "testSlice1",
          "targetSliceLineage": "l_<PURGED>$",
        },
        "metadata": {
          "_metadata": {
            "TX_META_CHANGE_LINEAGE": "target l_testSlice1$ -> l_<PURGED>$ source l_testSlice1$ -> l_<FOREIGN_STORE(test-main)>$",
            "store-name": "test-main",
          },
        },
        "payload": [],
        "sourceSliceLineage": "l_<FOREIGN_STORE(test-main)>$",
        "targetSliceLineage": "l_<PURGED>$",
        "uid": "<<UID>>",
      },
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "tx",
  },
]
`;

exports[`basic test having a sync slice in main but no replica 1`] = `
[
  {
    "body": {
      "mainStoreName": "test-main",
      "storeName": "test-replica-store-1",
      "syncSliceKeys": [],
    },
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "replica-info",
  },
  {
    "body": {
      "replicaStoreNames": [
        "test-replica-store-1",
      ],
      "storeName": "test-main",
      "syncSliceKeys": [
        "key_testSlice1",
      ],
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "main-info",
  },
  {
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "replica-ready",
  },
]
`;

exports[`basic test one slice sync - case 1 1`] = `
[
  {
    "actionId": "increment",
    "dispatcher": undefined,
    "payload": [],
    "sourceSliceLineage": "l_testSlice1$",
    "store": "test-main",
    "targetSliceLineage": "l_testSlice1$",
    "txId": "<txId>",
    "type": "TX",
  },
  {
    "actionId": "ready",
    "dispatcher": "watch-in-main(changeEffect)",
    "payload": [],
    "sourceSliceLineage": "l_watch-in-main$",
    "store": "test-main",
    "targetSliceLineage": "l_watch-in-main$",
    "txId": "<txId>",
    "type": "TX",
  },
  {
    "name": "watch-in-main(changeEffect)",
    "source": [
      {
        "actionId": "increment",
        "lineageId": "l_testSlice1$",
      },
      {
        "actionId": "ready",
        "lineageId": "l_watch-in-main$",
      },
    ],
    "type": "UPDATE_EFFECT",
  },
  {
    "actionId": "increment",
    "dispatcher": "watch-in-main(changeEffect)",
    "payload": [],
    "sourceSliceLineage": "l_testSlice1$",
    "store": "test-main",
    "targetSliceLineage": "l_testSlice1$",
    "txId": "<txId>",
    "type": "TX",
  },
  {
    "name": "watch-in-main(changeEffect)",
    "source": [
      {
        "actionId": "increment",
        "lineageId": "l_testSlice1$",
      },
    ],
    "type": "UPDATE_EFFECT",
  },
]
`;

exports[`basic test one slice sync - case 1 3`] = `
[
  {
    "body": {
      "mainStoreName": "test-main",
      "storeName": "test-replica-store-1",
      "syncSliceKeys": [
        "key_testSlice1",
      ],
    },
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "replica-info",
  },
  {
    "body": {
      "replicaStoreNames": [
        "test-replica-store-1",
      ],
      "storeName": "test-main",
      "syncSliceKeys": [
        "key_testSlice1",
      ],
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "main-info",
  },
  {
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "replica-ready",
  },
  {
    "body": {
      "targetSliceKey": "key_testSlice1",
      "tx": {
        "actionId": "increment",
        "config": {
          "actionId": "increment",
          "payload": [],
          "sourceSliceLineage": "l_<FOREIGN_STORE(test-main)>$1",
          "sourceSliceName": "testSlice1",
          "targetSliceLineage": "l_<PURGED>$1",
        },
        "metadata": {
          "_metadata": {
            "TX_META_CHANGE_LINEAGE": "target l_testSlice1$ -> l_<PURGED>$1 source l_testSlice1$ -> l_<FOREIGN_STORE(test-main)>$1",
            "store-name": "test-main",
          },
        },
        "payload": [],
        "sourceSliceLineage": "l_<FOREIGN_STORE(test-main)>$1",
        "targetSliceLineage": "l_<PURGED>$1",
        "uid": "<<UID>>",
      },
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "tx",
  },
  {
    "body": {
      "targetSliceKey": "key_testSlice1",
      "tx": {
        "actionId": "increment",
        "config": {
          "actionId": "increment",
          "payload": [],
          "sourceSliceLineage": "l_<FOREIGN_STORE(test-main)>$2",
          "sourceSliceName": "testSlice1",
          "targetSliceLineage": "l_<PURGED>$2",
        },
        "metadata": {
          "_metadata": {
            "DEBUG_DISPATCH_SOURCE": "watch-in-main(changeEffect)",
            "TX_META_CHANGE_LINEAGE": "target l_testSlice1$ -> l_<PURGED>$2 source l_testSlice1$ -> l_<FOREIGN_STORE(test-main)>$2",
            "store-name": "test-main",
          },
        },
        "payload": [],
        "sourceSliceLineage": "l_<FOREIGN_STORE(test-main)>$2",
        "targetSliceLineage": "l_<PURGED>$2",
        "uid": "<<UID>>",
      },
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "tx",
  },
]
`;

exports[`basic test one slice sync - case 2 - replica slice depends on sync slice 1`] = `
[
  {
    "actionId": "ready",
    "dispatcher": "watch-in-replica-store(changeEffect)",
    "payload": [],
    "sourceSliceLineage": "l_watch-in-replica-store$",
    "store": "test-replica-store-1",
    "targetSliceLineage": "l_watch-in-replica-store$",
    "txId": "<txId>",
    "type": "TX",
  },
  {
    "actionId": "increment",
    "dispatcher": undefined,
    "payload": [],
    "sourceSliceLineage": "l_testSlice1$",
    "store": "test-main",
    "targetSliceLineage": "l_testSlice1$",
    "txId": "<txId>",
    "type": "TX",
  },
  {
    "name": "watch-in-replica-store(changeEffect)",
    "source": [
      {
        "actionId": "ready",
        "lineageId": "l_watch-in-replica-store$",
      },
      {
        "actionId": "increment",
        "lineageId": "l_testSlice1$",
      },
    ],
    "type": "UPDATE_EFFECT",
  },
  {
    "actionId": "increment",
    "dispatcher": "watch-in-replica-store(changeEffect)",
    "payload": [],
    "sourceSliceLineage": "l_testSlice1$",
    "store": "test-replica-store-1",
    "targetSliceLineage": "l_testSlice1$",
    "txId": "<txId>",
    "type": "TX",
  },
  {
    "name": "watch-in-replica-store(changeEffect)",
    "source": [
      {
        "actionId": "increment",
        "lineageId": "l_testSlice1$",
      },
    ],
    "type": "UPDATE_EFFECT",
  },
]
`;

exports[`sync queuing with a send delay in main & replica 1`] = `
[
  {
    "body": {
      "mainStoreName": "test-main",
      "storeName": "test-replica-store-1",
      "syncSliceKeys": [
        "key_testSlice1",
      ],
    },
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "replica-info",
  },
  {
    "body": {
      "replicaStoreNames": [
        "test-replica-store-1",
      ],
      "storeName": "test-main",
      "syncSliceKeys": [
        "key_testSlice1",
      ],
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "main-info",
  },
  {
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "replica-ready",
  },
  {
    "body": {
      "targetSliceKey": "key_testSlice1",
      "tx": {
        "actionId": "increment",
        "config": {
          "actionId": "increment",
          "payload": [],
          "sourceSliceLineage": "l_<FOREIGN_STORE(test-main)>$8",
          "sourceSliceName": "testSlice1",
          "targetSliceLineage": "l_<PURGED>$11",
        },
        "metadata": {
          "_metadata": {
            "TX_META_CHANGE_LINEAGE": "target l_testSlice1$ -> l_<PURGED>$11 source l_testSlice1$ -> l_<FOREIGN_STORE(test-main)>$8",
            "store-name": "test-main",
          },
        },
        "payload": [],
        "sourceSliceLineage": "l_<FOREIGN_STORE(test-main)>$8",
        "targetSliceLineage": "l_<PURGED>$11",
        "uid": "<<UID>>",
      },
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "tx",
  },
  {
    "body": {
      "targetSliceKey": "key_testSlice1",
      "tx": {
        "actionId": "increment",
        "config": {
          "actionId": "increment",
          "payload": [],
          "sourceSliceLineage": "l_<FOREIGN_STORE(test-main)>$9",
          "sourceSliceName": "testSlice1",
          "targetSliceLineage": "l_<PURGED>$12",
        },
        "metadata": {
          "_metadata": {
            "DEBUG_DISPATCH_SOURCE": "watch-in-main-store(changeEffect)",
            "TX_META_CHANGE_LINEAGE": "target l_testSlice1$ -> l_<PURGED>$12 source l_testSlice1$ -> l_<FOREIGN_STORE(test-main)>$9",
            "store-name": "test-main",
          },
        },
        "payload": [],
        "sourceSliceLineage": "l_<FOREIGN_STORE(test-main)>$9",
        "targetSliceLineage": "l_<PURGED>$12",
        "uid": "<<UID>>",
      },
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "tx",
  },
  {
    "body": {
      "targetSliceKey": "key_testSlice1",
      "tx": {
        "actionId": "increment",
        "config": {
          "actionId": "increment",
          "payload": [],
          "sourceSliceLineage": "l_<FOREIGN_STORE(test-replica-store-1)>$3",
          "sourceSliceName": "testSlice1",
          "targetSliceLineage": "l_<PURGED>$13",
        },
        "metadata": {
          "_metadata": {
            "DEBUG_DISPATCH_SOURCE": "watch-in-replica-store(changeEffect)",
            "TX_META_CHANGE_LINEAGE": "target l_testSlice1$ -> l_<PURGED>$13 source l_testSlice1$ -> l_<FOREIGN_STORE(test-replica-store-1)>$3",
            "store-name": "test-replica-store-1",
          },
        },
        "payload": [],
        "sourceSliceLineage": "l_<FOREIGN_STORE(test-replica-store-1)>$3",
        "targetSliceLineage": "l_<PURGED>$13",
        "uid": "<<UID>>",
      },
    },
    "from": "test-replica-store-1",
    "to": "test-main",
    "type": "tx",
  },
  {
    "body": {
      "targetSliceKey": "key_testSlice1",
      "tx": {
        "actionId": "increment",
        "config": {
          "actionId": "increment",
          "payload": [],
          "sourceSliceLineage": "l_<FOREIGN_STORE(test-main)>$10",
          "sourceSliceName": "testSlice1",
          "targetSliceLineage": "l_<PURGED>$14",
        },
        "metadata": {
          "_metadata": {
            "DEBUG_DISPATCH_SOURCE": "watch-in-replica-store(changeEffect)",
            "TX_META_CHANGE_LINEAGE": "target l_testSlice1$ -> l_<PURGED>$13 source l_testSlice1$ -> l_<FOREIGN_STORE(test-replica-store-1)>$3,target l_<PURGED>$13 -> l_testSlice1$,target l_testSlice1$ -> l_<PURGED>$14 source l_testSlice1$ -> l_<FOREIGN_STORE(test-main)>$10",
            "store-name": "test-replica-store-1",
          },
        },
        "payload": [],
        "sourceSliceLineage": "l_<FOREIGN_STORE(test-main)>$10",
        "targetSliceLineage": "l_<PURGED>$14",
        "uid": "<<UID>>",
      },
    },
    "from": "test-main",
    "to": "test-replica-store-1",
    "type": "tx",
  },
]
`;
